a few more cleanups